# OpenSeeFace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: create-binaries.yaml
