[tool.poetry]
name = "openseeface"
version = "1.20.4"
description = ""
authors = ["emilianavt"]
license = "BSD-2-Clause"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^1.21.3"
opencv-python = "^4.5.4"
Pillow = "11.1.0"
onnxruntime = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

